<resources>
    <string name="app_name">SQLlite</string>
    <string name="message" translatable="false">Message</string>
    <string name="message_hint" translatable="false">Enter the message</string>
    <string name="phone" translatable="false">Phone Number</string>
    <string name="phone_hint" translatable="false">Enter the phone number</string>
    <string name="Save">Save Data</string>
    <string name="retrieve">Retrieve Data</string>
    <string name="insert">Insert Data</string>
</resources>